k8s/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: gce
  rules:
  - host: dev.leanworks.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: leanworks-hub-service
            port:
              number: 80
